<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quickstart.QuickStart3">

    <Button
        android:id="@+id/bt_back_pg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="73dp"
        android:background="@color/light_brown"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pg2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="86dp"
        android:background="#EFEFEF"
        android:text="@string/progress3"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_next_pg2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_finish_pg3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="73dp"
        android:background="@color/light_brown"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pg2" />

    <TextView
        android:id="@+id/qs3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="154dp"
        android:text="@string/quick3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topcard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topcard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="#FFE8E8"
        app:layout_constraintBottom_toBottomOf="@+id/topcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>